WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
216086
iPad + Trackpad: JW Library highlighting and edit menus don't appear
https://bugs.webkit.org/show_bug.cgi?id=216086
Summary
iPad + Trackpad: JW Library highlighting and edit menus don't appear
Tim Horton
Reported
2020-09-02 11:30:42 PDT
iPad + Trackpad: JW Library highlighting and edit menus don't appear
Attachments
Patch
(3.34 KB, patch)
2020-09-02 11:33 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2020-09-02 11:33:36 PDT
Created
attachment 407781
[details]
Patch
EWS
Comment 2
2020-09-02 13:41:51 PDT
Committed
r266485
: <
https://trac.webkit.org/changeset/266485
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 407781
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-09-02 13:42:15 PDT
<
rdar://problem/68230139
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug